# codid

./: Cargo.toml  Cross.toml  Makefile  README.md  build.sh  codid.nix  flake.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: ci-debug-builds-android.yml  ci-debug-builds-linux.yml  ci-debug-builds.yml  ci-release-builds-android.yml  ci-release-builds-linux.yml  ci-releases.yml  ci-tests-android.yml  ci-tests-linux.yml  ci-tests-nix.yml  ci-tests.yml  ci.yml  delete_old_artifacts.yml  ndk.yml  stale.yml
assets/: config.sample.toml
assets/lib/systemd/user/: codid.service
python/: README.md
rust/: Cargo.toml  Cross.toml  Dockerfile.gnu  Dockerfile.musl  README.md  build.sh
rust/src/: lib.rs  packer.rs  protocol.rs  serial_port.rs
src/: codi_event_loop.rs  codi_protocol.rs  codid_control_loop.rs  codid_event_loop.rs  control_loop.rs  daemon.rs  lib.rs  logging.rs  observer.rs  packer.rs  platforms.rs  protocol.rs  rpc.rs  serial_port.rs
