[package]
name = "codid"
publish = false
license = "MIT"
readme = "README.md"
repository = "https://github.com/Cosmo-CoDiOS/codid"
description = "Rust implementation of the CoDi interface for Linux and Android based ROMs"
categories = ["aarch64", "daemon", "planet-computers"]
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
keywords = ["cover-display", "codi", "planet-computers"]
edition = "2021"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/codid", dest = "/usr/bin/codid", mode = "755", config = false, doc = false },
    { source = "target/release/codictl", dest = "/usr/bin/codictl", mode = "755", config = false, doc = false },
    { source = "assets/lib/systemd/user/codid.service", dest = "/usr/lib/systemd/user/codid.service", config = true, doc = false }
]

[[bin]]
name = "codid"

[[bin]]
name = "codictl"

[lib]
name = "codid"
path = "src/lib.rs"

[features]
default = []
stock-codi = ["codi_protocol_common", "codi_stock_protocol"]
codios-codi = ["codi_protocol_common", "codi_os_protocol"]
android = ["android_logger"]
ubports = ["zbus", "zvariant", "ical"]
gemian = ["zbus", "zvariant", "ical"]
postmarketos = ["zbus", "zvariant", "ical"]
sailfish = ["zbus", "zvariant", "ical"]
nixos = ["zbus", "zvariant", "ical"]

[dependencies]
futures = "0.3.28"
config = "0.13.3"
clap = "4.2.4"
log = { version = "0.4.17", features = ["kv_unstable"] }
env_logger = "*"
structure = "0.1.2"
lazy_static = "1.4.0"
dirs = "5.0.0"
thiserror = "1.0.40"
anyhow = "1.0.70"
zvariant = { version = "3.12.0", optional = true }
zbus = { version = "3.12.0", optional = true }
tokio = { version = "1.27.0", features = ["full"] }
ical = { version = "0.8.0", optional = true }
tonic = "0.9.2"

[dependencies.codi_os_protocol]
git = "https://github.com/Cosmo-CoDiOS/codi_protocols"
branch = "main"
optional = true

[dependencies.codi_protocol_common]
git = "https://github.com/Cosmo-CoDiOS/codi_protocols"
branch = "main"
optional = true
features = ["std"]

[dependencies.codi_stock_protocol]
git = "https://github.com/Cosmo-CoDiOS/codi_protocols"
branch = "main"
optional = true

[dependencies.codi_boot_protocol]
git = "https://github.com/Cosmo-CoDiOS/codi_protocols"
branch = "main"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.13", optional = true }

[profile.dev]
lto = true
opt-level = "z"
codegen-units = 1
debug = true
strip = false

[profile.dev.package."*"]
codegen-units = 1
opt-level = "z"
debug = true

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
debug = false
strip = true

[profile.release.package."*"]
codegen-units = 1
opt-level = "s"
debug = false
