[package]
name = "codid"
publish = false
license = "MIT"
readme = "README.md"
repository = "https://github.com/Cosmo-CoDiOS/codid"
description = "Rust implementation of the CoDi interface for Linux and Android based ROMs"
categories = ["aarch64", "daemon", "planet-computers"]
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
keywords = ["cover-display", "codi", "planet-computers"]
edition = "2021"

[[bin]]
name = "codid"
required-features = ["linux"]

[[bin]]
name = "codictl"
required-features = ["linux"]

[lib]
name = "codid"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"] # For Android - Java/Kotlin JNI.

[features]
default = []

stock-codi = ["codi_stock_protocol"]
codios-codi = ["codi_os_protocol", "codi_boot_protocol"]

linux = ["zbus", "zvariant", "ical"]
android = ["android_logger"]

ubports = ["linux"]
gemian = ["linux"]
droidian = ["linux"]
postmarketos = ["linux"]
sailfishos = ["linux"]
nixos = ["linux"]

[dependencies]
futures = "0.3.30"
config = "0.14.0"
clap = { version = "4.5.3", features = ["string", "color"] }
log = { version = "0.4.21" }
env_logger = "0.11.3"
structure = "0.1.2"
lazy_static = "1.4.0"
dirs = "5.0.1"
thiserror = "1.0.58"
anyhow = "1.0.81"
zvariant = { version = "4.0.2", optional = true }
zbus = { version = "4.1.2", optional = true }
tokio = { version = "1.36.0", features = ["fs", "io-util", "io-std", "rt", "process", "rt-multi-thread", "signal", "sync", "time"] }
ical = { version = "0.11.0", optional = true }
tonic = "0.11.0"
rustix = "0.38.31"

[dependencies.codi_os_protocol]
git = "https://github.com/Cosmo-CoDiOS/codi_protocols"
branch = "main"
optional = true

[dependencies.codi_protocol_common]
git = "https://github.com/Cosmo-CoDiOS/codi_protocols"
branch = "main"

[dependencies.codi_stock_protocol]
git = "https://github.com/Cosmo-CoDiOS/codi_protocols"
branch = "main"
optional = true

[dependencies.codi_boot_protocol]
git = "https://github.com/Cosmo-CoDiOS/codi_protocols"
branch = "main"
optional = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.13", optional = true }

[profile.dev]
lto = true
opt-level = "z"
codegen-units = 1
debug = true
strip = false

[profile.dev.package."*"]
codegen-units = 1
opt-level = "z"
debug = true

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
debug = false
strip = true

[profile.release.package."*"]
codegen-units = 1
opt-level = "s"
debug = false
