[package]
name = "codi-linuxd"
publish = false
license = ["MIT OR Apache-2.0"]
readme = "/rust/README.md"
repository = "https://github.com/shymega/cosmo-codi-linux"
description = "Rust implementation of the CoDi interface for Linux"
categories = ["cover-display", "codi"]
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
keywords = ["cover-display", "codi"]
edition = "2018"

[dependencies]
glib = "0.10.3"
serialport = "3.3.0"
dbus-tokio = "0.6.0"


[profile.dev]
lto = true
opt-level = "s"
codegen-units = 1
debug = false

[profile.dev.package."*"]
codegen-units = 1
opt-level = "z"
debug = false

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
debug = false

[profile.release.package."*"]
codegen-units = 1
opt-level = "s"
debug = false